corrected a duplication of .png on the line

--- a/button.css
+++ b/button.css
@@ -15,7 +15,7 @@ button {
 }
 
 button.login {
-    background-image: url(login.png.png);
+    background-image: url(login.png);
 }
 
 button.signup {
