--- a/form_su.css
+++ b/form_su.css
@@ -22,6 +22,11 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+     width: 100%;
+    height: 100vh;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(logintrack.jpg);
+    background-size: cover;
+    background-position: center;
     overflow: hidden;
 }
 
