--- a/form_su.css
+++ b/form_su.css
@@ -69,7 +69,7 @@ select {
 input[type="text"]:focus,
 input[type="password"]:focus,
 select:focus {
-    border-color: #fff; /* Change border color on focus */
+    border-color: white; /* Change border color on focus */
 }
 
 /* Button Container Styles */
