--- a/form.css
+++ b/form.css
@@ -1,5 +1,12 @@
 body {
     background-image: url(blackbrick.jpg);
+    display: flex; /* Enable flexbox for the body */
+    flex-direction: column; /* Arrange elements vertically */
+    align-items: center; /* Center elements horizontally */
+    justify-content: center; /* Center elements vertically */
+    min-height: 100vh; /* Ensure body takes full viewport height */
+    overflow-x: hidden; /* Hide horizontal scrollbar */
+    overflow-y: hidden; /* Enable vertical scrollbar if needed */
 }
 
 h3 {
@@ -18,6 +25,9 @@ h3 {
     left: 50%;
     top: 17.0%;
     transform: translate(-50%, -50%);
+    display: flex;
+    flex-wrap: wrap; /* allow form elements to wrap to the next line */
+    justify-content: center; /* center form elements horizontally */
 }
 
 form {
@@ -37,11 +47,15 @@ form {
     margin: 0.5px auto;
     background-color:rgba(192, 192, 192, 1);
     box-shadow: 5px 5px 6px 1px rgba(96, 96, 96, 0.7);
+    display: flex;
+    flex-wrap: wrap; /* allow form elements to wrap to the next line */
+    justify-content: center; /* center form elements horizontally */
+
 }
 
 form.short{
     width:250px;
-    top: 42.9%;
+    top: 42.6%;
 }
 h3.short{
     width: 250px;
@@ -49,7 +63,7 @@ h3.short{
 }
 form.medium {
     width:250px;
-    top: 48.5%;
+    top: 48.1%;
 }
 h3.medium {
     width: 250px;
@@ -57,7 +71,7 @@ h3.medium {
 }
 form.long{
     width:300px;
-    top: 54.5%;
+    top: 53.5%;
 }
 h3.long{
     width: 300px;
@@ -65,7 +79,7 @@ h3.long{
 }
 form.import{
     width: 250px;
-    top: 44.6%;
+    top: 44.3%;
 }
 h3.import{
     width: 250px;
@@ -73,19 +87,21 @@ h3.import{
 }
 form.report{
     width: 250px;
-    top: 42.7%;
+    top: 42.3%;
+    min-height: 128;
 }
 h3.report{
     width: 250px;
-    top: 15%;
+    top: 11.6%;
 }
+
 form.marks {
+    border-radius: 18px;
+    font-size: 18px;
     width:350px;
     top: 47.5%
-}
-h3.marks {
-    width: 350px;
-    top: 98;
+    
+     
 }
 
 table {
